--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
     "mongoose": "^7.8.8",
+    "openai": "^6.17.0",
     "twilio": "^4.23.0"
   },
   "devDependencies": {
