--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
+    "mongodb": "^7.1.0",
     "mongoose": "^7.8.8",
     "openai": "^6.17.0",
     "twilio": "^4.23.0"
